<resources>
    <string name="app_name">我信</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="setting">设置</string>
    <string name="nickname">昵称</string>
    <string name="hint_nickname">例如：陈晨</string>
    <string name="testUsername">pwrliang</string>
    <string name="region">地区</string>
    <string name="testRegion">辽宁 丹东</string>
    <string name="phone_number">手机号码</string>
    <string name="testPhoneNumber">15382018703</string>
    <string name="hint_phone_number">你的手机号码</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="hint_password">填写密码</string>
    <string name="testPassword">geng_93418</string>
    <string name="hint_confirm_password">填写确认密码</string>
    <string name="Login">登录</string>
    <string name="username">用户名</string>
    <string name="hint_username">您的用户名</string>
    <string name="testNickname">耿亮</string>
    <string name="registration">注册</string>
    <string name="login">登录</string>
    <string name="logining">登录中</string>
    <string name="registing">注册中</string>
    <string name="different_password">两次密码不一致</string>
    <string name="null_nickname">未填写昵称</string>
    <string name="null_phone_number">未填写手机号</string>
    <string name="null_username">未填写用户名</string>
    <string name="null_password">未填写密码</string>
    <string name="registration_successful">注册成功</string>
    <string name="no_response">操作失败，服务器未响应</string>
    <string name="add_friend">添加朋友</string>
    <string name="find_friend">查找好友</string>
    <string name="send_message">发消息</string>
    <string name="self_description">个性签名</string>
    <string name="profile">详细资料</string>
    <string name="default_text">-</string>
    <string name="search_no_result">查无此人</string>
    <string name="add_to_contacts">添加到通讯录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="require_add_friend">请求添加好友</string>
    <string name="please_input_note">请输入验证信息</string>
    <string name="server_no_responding">通信失败，服务器无响应</string>
    <string name="require_add_to_contract_success">已发出邀请</string>
    <string name="new_friends">新的朋友</string>
    <string name="query_friend_application">查看好友请求</string>
    <string name="none">无</string>
    <string name="black_list">黑名单</string>
    <string name="click_to_manage_blacklist">点击管理黑名单</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="logout">注销</string>
    <string name="user_login">用户登录</string>
    <string name="send">发送</string>
    <string name="input_something">说点什么吧</string>
    <string name="search_user">搜索用户</string>
    <string name="no_friend_request">暂无好友请求</string>
    <string name="friend_unavailable">你们不是好友或已拉黑</string>
    <string name="delete_session">删除会话</string>
    <string name="delete_session_or_not">是否要删除会话？</string>
    <string name="accept">同意</string>
    <string name="reject">拒绝</string>
    <string name="mod_friend_note">修改好友备注</string>
    <string name="please_input_friend_note">请输入好友备注</string>
    <string name="my_profile">我的名片</string>
    <string name="portrait">头像</string>
    <string name="registration_date">注册日期</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="save">保存</string>
    <string name="copied">已复制</string>
</resources>
