<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ai_iv_portrait"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/portrait_default" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ai_tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/ai_tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <Button
        android:id="@+id/ai_btn_accept"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/accept"
        android:textAppearance="?android:textAppearanceSmall" />

    <Button
        android:id="@+id/ai_btn_reject"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/reject"
        android:textAppearance="?android:textAppearanceSmall" />

</LinearLayout>
