<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".activities.ProfileSettingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/aps_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/aps_ll_portrait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/portrait" />

                <ImageView
                    android:id="@+id/aps_iv_portrait"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/portrait_default" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/aps_tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/registration_date" />

                <TextView
                    android:id="@+id/aps_tv_reg_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/nickname" />

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <EditText
                    android:id="@+id/aps_edt_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:maxLength="10"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/region" />

                <EditText
                    android:id="@+id/aps_edt_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:maxLength="20"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/aps_edt_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:inputType="phone"
                    android:maxLength="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/gender" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/aps_rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/aps_rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_bg"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/Profile_Setting_TextView"
                    android:text="@string/self_description" />

                <EditText
                    android:id="@+id/aps_edt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:maxLength="30"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/aps_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/greenbutton_bg"
                android:text="@string/save"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
