<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/ap_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/ap_iv_portrait"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/portrait_default" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ap_tv_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testNickname"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/ap_iv_gender"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/female" />
            </LinearLayout>

            <TextView
                android:id="@+id/ap_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="我信号：pwrliang"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/ap_tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="昵称：耿亮"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/ap_tv_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="辽宁 丹东"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/self_description"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/ap_tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="愿得一人心，白首不分离~"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/ap_btn_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/greenbutton_bg"
            android:text="@string/send_message"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
